# isic

./: .copier-answers.resonant.yml  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Procfile  README.md  conftest.py  docker-compose.override.yml  docker-compose.yml  generate-requirements.sh  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  rules.yml  search.md  setup.py  tailwind.config.js  tox.ini  uv.toml
.circleci/: config.yml
.devcontainer/: bootstrap-devcontainer.sh  devcontainer-lock.json  devcontainer.json  docker-compose.devcontainer.yml
.devcontainer/default/: devcontainer.json
.github/: renovate.json5
.github/workflows/: ci.yml  nightly-flaky-tests.yml  release.yml  test.yml
.greenmask/: config.yml
deploy/: low-priority-worker.sh  worker.sh
dev/: .env.docker-compose  .env.docker-compose-native  browser-sync.config.js  django.Dockerfile  export-env.sh  greenmask-dump.sh  import-db.sh  native-development.md  node.Dockerfile  private_key_development.pem
docs/: zip-download-flow.md
isic/: __init__.py  asgi.py  auth.py  celery.py  conftest.py  factories.py  middleware.py  settings.py  types.py  urls.py  wsgi.py
isic/core/: admin.py  api.py  apps.py  constants.py  context_processors.py  dsl.py  fields.py  filters.py  health.py  jinja2.py  models.py  pagination.py  permissions.py  search.py  serializers.py  signals.py  sitemaps.py  stats.py  storage.py  tasks.py  templating.py  urls.py  views.py  widgets.py
isic/core/api/: __init__.py  collection.py  doi.py  exceptions.py  image.py  user.py
isic/core/forms/: collection.py  doi.py  search.py
isic/core/migrations/: 0001_default_site.py  0001_initial.py  0001_initial_squashed.py  0002_alter_duplicateimage_accession.py  0002_initial.py  0002_merge_default_site.py  0003_alter_duplicateimage_accession.py  0003_auto_20240701_1459.py  0004_alter_collection_description.py  0004_alter_collection_description_squashed_0023_alter_image_options.py  0004_auto_20210519_2247.py  0005_collection.py  0005_doi_bundle.py  0006_alter_collection_images.py  0006_auto_20210524_2350.py  0006_doi_slug.py  0007_alter_doi_slug.py  0007_isic_id.py  0008_auto_20210526_0232.py  0008_doi_bundle_size.py  0009_alter_doi_bundle_size.py  0009_auto_20210602_1658.py  0010_auto_20210602_1835.py  0010_doi_citations.py  0011_alter_girderimage_accession_id.py  0011_doi_metadata_doi_metadata_size.py  0012_alter_doi_options.py  0012_auto_20210603_2108.py  0013_alter_doi_bundle_alter_doi_metadata_supplementalfile.py  0013_auto_20210603_2311.py  0014_alter_doi_bundle_alter_doi_metadata.py  0014_auto_20210604_0410.py  0015_auto_20210604_1420.py  0015_doi_schema_org_dataset.py  0016_alter_girderimage_status.py  0016_collection_collection_pinned_are_public.py  0016_rename_file_supplementalfile_blob.py  0017_auto_20210604_2116.py  0018_auto_20210607_1305.py  0019_girderimage_pre_review.py  (+65 more)
isic/core/models/: __init__.py  base.py  collection.py  collection_count.py  doi.py  girder_image.py  image.py  image_alias.py  image_embedding.py  image_redirect.py  isic_id.py  segmentation.py  supplemental_file.py
isic/core/services/: __init__.py  iptc.py
isic/core/storages/: __init__.py  minio.py  s3.py  static_files.py  utils.py
isic/core/templates/: base.html
isic/core/templatetags/: accession.py  chunks.py  display.py  get_key.py  localtime.py  url_replace.py
isic/core/tests/: conftest.py  factories.py  test_admin.py  test_api_cohort.py  test_api_collection.py  test_api_contributor.py  test_api_image.py  test_api_permissions.py  test_api_user.py  test_cache.py  test_collection.py  test_collection_detail_browser.py  test_collection_list_browser.py  test_collection_pin_browser.py  test_collection_share_browser.py  test_collection_shares.py  test_collection_table_browser.py  test_data_explorer_browser.py  test_doi.py  test_doi_browser.py  test_dsl.py  test_embargoed_dashboard.py  test_flash_messages_browser.py  test_health.py  test_image_identifier.py  test_image_modal_browser.py  test_image_pin.py  test_image_shares.py  test_isic_id.py  test_isic_oauth_app.py  test_materialized_view_counts.py  test_metadata_download.py  test_metadata_masking_api.py  test_middleware.py  test_permissions.py  test_search.py  test_serializers.py  test_similar_image_feedback.py  test_sitemap.py  test_snapshot.py  (+6 more)
isic/core/utils/: csv.py  db.py  display.py  http.py  iterators.py  logging.py
isic/core/views/: collections.py  data_explorer.py  doi.py  embargoed.py  images.py  lesion.py  users.py
isic/discourse_sso/: apps.py  forms.py  tasks.py  urls.py  utils.py  views.py
isic/discourse_sso/admin/: image.py
isic/discourse_sso/rest/: image.py
isic/discourse_sso/templates/: login.html
isic/discourse_sso/tests/: conftest.py  factories.py  test_form.py  test_login.py  test_sso.py  test_sso_view.py
isic/find/: api.py  apps.py  find.py  serializers.py  urls.py
isic/find/tests/: test_find.py  test_quickfind_browser.py
isic/ingest/: admin.py  api.py  apps.py  filters.py  forms.py  models.py  review_views.py  serializers.py  service.py  tasks.py  urls.py  validators.py  views.py  zip_utils.py
isic/ingest/migrations/: 0001_initial.py  0001_initial_squashed.py  0001_initial_squashed_0032_alter_metadataversion_created_and_more.py  0002_accession_is_cog.py  0002_auto_20201225_0858.py  0002_auto_20210119_2017.py  0003_accession_accession_is_cog_mosaic.py  (+173 more)
isic/login/: admin.py  apps.py  backends.py  forms.py  girder.py  hashers.py  models.py  views.py
isic/settings/: _docker.py  _logging.py  _sentry_utils.py  _utils.py  base.py  development.py  heroku_production.py  production.py  testing.py  upstream_base.py
isic/stats/: admin.py  api.py  apps.py  models.py  tasks.py  urls.py  views.py
isic/studies/: admin.py  api.py  apps.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py  widgets.py
isic/zip_download/: api.py  apps.py  serializers.py  urls.py
node-src/: bundle.ts  cog.mjs  components.pcss  doiCreationForm.ts  styles.pcss  supplementalFileUploader.ts
(+385 files in other folders)
