[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "isic"
version = "0.0.0"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  # Runtime dependencies, always needed
  "bcrypt==5.0.0",
  "celery==5.6.3",
  "deepdiff==9.1.0",
  "django[argon2]==5.2.3",
  "django-allauth[socialaccount]==65.17.0",
  "django-auth-style[allauth,oauth-toolkit]==0.15.0",
  "django-cachalot==2.9.0",
  "django-click==2.5.0",
  "django-cors-headers==4.9.0",
  "django-environ==0.13.0",
  "django-extensions==4.1",
  "django-filter==25.2",
  "django-json-widget==2.1.1",
  "django-markdownify==0.9.7",
  "django-ninja==1.4.5",
  "django-oauth-toolkit==1.7.1",
  "django-redis==6.0.0",
  "django-resonant-settings[allauth,celery]==0.51.0",
  "django-resonant-utils[allauth,s3_storage]==0.19.0",
  "django-stubs-ext==5.2.9",
  "django-widget-tweaks==1.5.1",
  "gdal==3.11.0",
  "google-analytics-data==0.22.0",
  "elasticsearch==9.4.0",
  "isic-metadata==5.1.0",
  "jaro-winkler==2.0.3",
  "numpy==2.4.6",
  "pandas==3.0.3",
  "Pillow==12.2.0",
  "psycopg[binary]==3.3.4",
  "pycountry==26.2.16",
  "pydantic==2.13.4",
  "pyexiv2==2.15.5",
  "pyparsing==3.3.2",
  "python-magic==0.4.27",
  "redis==7.4.0",
  "requests==2.34.2",
  "requests-toolbelt==1.0.0",
  "rich==15.0.0",
  "tenacity==9.1.4",
  "whitenoise[brotli]==6.12.0",
  "zipfile-deflate64==0.2.0",
  # Production-only
  "django-s3-file-field[s3]==1.1.0",
  "django-storages[s3]==1.14.6",
  "sentry-sdk[celery,django,pure_eval]==2.60.0",
  "gunicorn==26.0.0",
  "orjson==3.11.9",
  "django-template-partials==25.3",
  "pgvector==0.4.2",
  "pyarrow==24.0.0",
  "pydantic-to-pyarrow==0.1.6",
]

[project.optional-dependencies]
development = [
  # Runtime dependencies, only needed with "development" settings
  "django-browser-reload==1.21.0",
  "django-debug-toolbar==6.3.0",
  "django-minio-storage==0.5.9",
  "django-resonant-utils[minio_storage]==0.19.0",
  "django-s3-file-field[minio]==1.1.0",
  "ipython==9.13.0",
  "watchdog==6.0.0",
  "werkzeug==3.1.8",
]

[dependency-groups]
dev = [
  # Additional developer tools
  # The "dev" dependency group is installed by default,
  # so use this to install "development" extras by default too
  "isic[development]",
  "tox==4.54.0",
  "tox-uv==1.35.2",
]
lint = [
  "djhtml==3.0.11",
  "ruff==0.15.14",
  "semgrep==1.163.0"
]
type = [
  "mypy==1.19.1",
  "celery-types==0.26.0",
  "django-stubs[compatible-mypy]==5.2.9",
  "pandas-stubs==3.0.0.260204",
]
test = [
  "factory-boy==3.3.3",
  "hypothesis==6.152.9",
  "pytest==8.4.2",
  "pytest-cov==7.1.0",
  "pytest-django==4.12.0",
  "pytest-factoryboy==2.8.1",
  "pytest-lazy-fixtures==1.4.0",
  "pytest-mock==3.15.1",
  # Enable with "pytest --random-order ..."
  "pytest-random-order==1.2.0",
  # Enable with "pytest --count=... ..."
  "pytest-repeat==0.9.4",
  "pytest-playwright==0.8.0",
]
profile = [
  "memray==1.19.3",
  "pyinstrument==5.1.2",
]

[tool.hatch.build]
only-include = [
  "isic",
]

[[tool.uv.index]]
name = "large_image"
url = "https://girder.github.io/large_image_wheels/"
explicit = true

[tool.uv.sources]
gdal = { index = "large_image" }
pydantic-to-pyarrow = { git = "https://github.com/ImageMarkup/pydantic-to-pyarrow", branch = "support-computed-fields" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Incompatible with formatter
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "COM812", # missing-trailing-comma
  "COM819", # prohibited-trailing-comma
  "D206", # docstring-tab-indentation
  "D300", # triple-single-quotes
  "E111", # indentation-with-invalid-multiple
  "E114", # indentation-with-invalid-multiple-comment
  "E117", # over-indented
  "ISC001", # single-line-implicit-string-concatenation
  "ISC002", # multi-line-implicit-string-concatenation
  "Q", # flake8-quotes
  "W191", # tab-indentation

  # Incompatible with Django
  "A003", # builtin-attribute-shadowing
  "ARG001", # unused-function-argument
  "ARG002", # unused-method-argument
  "RUF012", # mutable-class-default

  # Overly burdensome
  "ANN", # flake8-annotations
  "D1", # undocumented-*
  "EM", # flake8-errmsg
  "ERA001", # commented-out-code
  "FIX", # flake8-fixme
  "PLR2004", # magic-value-comparison
  "RET505", # superfluous-else-return
  "RET506", # superfluous-else-raise
  "RET507", # superfluous-else-continue
  "RET508", # superfluous-else-break
  "TD002", # missing-todo-author
  "TD003", # missing-todo-link
  "TRY003", # raise-vanilla-args

  # Project-specific
  "A002", # builtin-argument-shadowing
  "DJ001", # django-nullable-model-string-field
  "FBT001", # boolean-typed-positional-argument
  "I002", # missing-required-import
  "PLC0415", # import-outside-top-level
  "RET503", # implicit-return
  "TC002", # typing-only-third-party-import
  "TRY002", # raise-vanilla-class
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/**" = [
  "N806", # non-lowercase-variable-in-function
  "RUF012", # mutable-class-default
]
"**/settings/**" = [
  "F403", # undefined-local-with-import-star
  "F405", # undefined-local-with-import-star-usage
]
"**/settings/{development,testing}.py" = [
  "S105", # hardcoded-password-string
]
"**/tests/**" = [
  "DJ007", # django-all-with-model-form
  "DJ008", # django-model-without-dunder-str
  "INP001", # implicit-namespace-package
  "PLR0913", # too-many-arguments
  "S", # flake8-bandit
  "SLF001", # private-member-access
]

[tool.ruff.lint.flake8-boolean-trap]
extend-allowed-calls = ["pydantic.Field", "django.db.models.Value"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["ninja.Query"]

[tool.ruff.lint.flake8-self]
extend-ignore-names = ["_base_manager", "_default_manager",  "_meta"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
runtime-evaluated-decorators = ["pydantic.validate_call"]

[tool.ruff.lint.isort]
# Sort by name, don't cluster "from" vs "import"
force-sort-within-sections = true
# Deferred annotations allows TC* rules to move more imports into TYPE_CHECKING blocks
required-imports = ["from __future__ import annotations"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder", "resonant-settings"]
sections = {"resonant-settings" = ["resonant_settings"] }

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
files = [
  "isic",
]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = [
    "mypy_django_plugin.main",
]

[tool.django-stubs]
django_settings_module = "isic.settings.testing"

[tool.pytest.ini_options]
markers = [
  "playwright: mark a test as using Playwright.",
]
addopts = [
  # Test utilities should be imported absolutely from the pythonpath,
  # so use the Pytest-recommended "importlib" mode
  "--import-mode=importlib",
  "--strict-config",
  "--strict-markers",
  "--showlocals",
  # Specifying as "--ds" will override any value in the environment
  "--ds=isic.settings.testing",
  "--cov",
  "--cov-report=html",
]
filterwarnings = [
  "error",
  # pytest often causes unclosed socket warnings
  'ignore:unclosed <socket\.socket:ResourceWarning',
  # https://github.com/vitalik/django-ninja/issues/1245
  "ignore:Support for class-based `config` is deprecated:pydantic.warnings.PydanticDeprecatedSince20",
  "ignore:csrf argument is deprecated:DeprecationWarning:isic.urls",
  # In test_publish_copies_default_attribution
  'ignore:Unclosed file <tempfile\.SpooledTemporaryFile:ResourceWarning',
]

[tool.coverage.run]
source_pkgs = [
  "isic",
]
branch = true
